arreglos de errores finales en back